# cg-lab

./: .gitignore  README.md  pyproject.toml
Work2/: README.md  main.py
Work3/: README.md  main.py
Work4/: README.md  main.py
Work5/: README.md  main.py
Work6/: README.md  main.py
Work7/: README.md  main.py
src/Work0/: config.py  main.py  physics.py
tools/: render_demo.py
